--- a/kubernetes-security/task03/03-jane-admin.yaml
+++ b/kubernetes-security/task03/03-jane-admin.yaml
@@ -7,7 +7,6 @@ roleRef:
   kind: ClusterRole
   name: admin
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
+  kind: ServiceAccount
   name: jane
   namespace: dev
