--- a/kubernetes-security/task03/05-ken-view.yaml
+++ b/kubernetes-security/task03/05-ken-view.yaml
@@ -1,13 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: ken-viewer
+  creationTimestamp: "2022-05-10T12:45:54Z"
+  name: ken-view
+  resourceVersion: "599329"
+  uid: 37134d64-2baa-41a5-adba-bdf6dcbd8078
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: view
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
+- kind: ServiceAccount
   name: ken
   namespace: dev
