--- a/kubernetes-security/task03/03-jane-admin.yaml
+++ b/kubernetes-security/task03/03-jane-admin.yaml
@@ -1,7 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: jane-admin
+  namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
