--- a/kubernetes-security/task03/05-ken-view.yaml
+++ b/kubernetes-security/task03/05-ken-view.yaml
@@ -1,10 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  creationTimestamp: "2022-05-10T12:45:54Z"
   name: ken-view
-  resourceVersion: "599329"
-  uid: 37134d64-2baa-41a5-adba-bdf6dcbd8078
+  namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
